--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<script src="js/background.js"></script>
+		<script src="js/car.js"></script>
+		<script src="js/obstacle.js"></script>
 		<script src="js/game.js"></script>
 		<script src="index.js"></script>
 
